--- a/resources/js/styles/sidebar.scss
+++ b/resources/js/styles/sidebar.scss
@@ -16,7 +16,7 @@
     width: 247px !important;
     height: 100%;
     position: fixed;
-    font-size: 0px;
+    font-size: 16px;
     top: 0;
     bottom: 0;
     left: 0;
@@ -26,7 +26,9 @@
     .horizontal-collapse-transition {
       transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
     }
-
+    .el-menu-item{
+      font-size: 16px !important;
+    }
     .scrollbar-wrapper {
       overflow-x: hidden !important;
 
@@ -62,6 +64,7 @@
     // menu hover
     .submenu-title-noDropdown,
     .el-submenu__title {
+      font-size: 16px;
       &:hover {
         background-color: #FFFFFF !important;
         color:#ffffff;
@@ -76,7 +79,6 @@
     & .el-submenu .el-menu-item {
       min-width: 247px !important;
       background-color: #ffffff !important;
-
       &:hover {
         background-color: #ffffff !important;
         color: #ffffff;
@@ -182,6 +184,7 @@
 
   .nest-menu .el-submenu>.el-submenu__title,
   .el-menu-item {
+    font-size: 16px;
     &:hover {
       // you can use $subMenuHover
       background-color: #ffffff !important;
