--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
+$purewhite: #ffffff;
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
@@ -18,3 +19,8 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$grey: #f4f4f4;
+$grey7070: #707070;
+$greyA0A0: #A0A0A0;
+$greyD3D3: #D3D3D3;
+$green0886: #088600;
