--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,6 +23,14 @@
 }
 
 .menu-wrapper {
+  .el-menu-item, .el-submenu__title {
+    height: 38px;
+    line-height: 34px;
+  }
+  .el-submenu .el-menu-item {
+    height: 38px;
+    line-height: 34px;
+  }
   .router-link-active {
     .is-active {
       span {
